--- a/main.css
+++ b/main.css
@@ -1,104 +1,231 @@
-/*
-Error: $color: "violet" is not a color for `darken'
-        on line 9 of main.scss, in `results'
-        from line 110 of main.scss
+.bubble {
+  border-radius: 50%;
+  display: inline-block; }
 
-4:       border-left: 3px solid $color;
-5:       border-top: 3px solid $color;
-6:     }
-7:     
-8:     .#{$color}-back{
-9:       background: darken($color, 15%);
-10:       border-right: 3px solid $color;
-11:       border-bottom: 3px solid $color;
-12:     }
-13:     
-14:     .#{$color}-soft{
+body {
+  background: #DDC;
+  margin: 0; }
 
-Backtrace:
-main.scss:9:in `results'
-main.scss:110
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:303:in `reformat_argument_error'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:146:in `rescue in _perform'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/script/tree/funcall.rb:123:in `_perform'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/script/tree/node.rb:50:in `perform'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:394:in `visit_prop'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `block in with_base'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `with_base'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:430:in `block (2 levels) in visit_rule'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:430:in `map'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:430:in `block in visit_rule'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:428:in `visit_rule'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `block in with_base'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `with_base'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:240:in `block (3 levels) in visit_each'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:240:in `map'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:240:in `block (2 levels) in visit_each'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:232:in `map'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:232:in `block in visit_each'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:231:in `visit_each'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `block in with_base'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `with_base'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:363:in `block (4 levels) in visit_mixin'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:363:in `map'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:363:in `block (3 levels) in visit_mixin'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:363:in `block (2 levels) in visit_mixin'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:84:in `perform_arguments'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:358:in `block in visit_mixin'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:98:in `block in with_mixin'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:98:in `with_mixin'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:346:in `visit_mixin'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `block in with_base'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:115:in `with_frame'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/stack.rb:79:in `with_base'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `map'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:368:in `_render_with_sourcemap'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/engine.rb:285:in `render_with_sourcemap'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:490:in `update_stylesheet'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `each'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.13/lib/sass/plugin/compiler.rb:328:in `block in watch'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/listen-2.8.5/lib/listen/listener.rb:282:in `call'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/listen-2.8.5/lib/listen/listener.rb:282:in `_process_changes'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/listen-2.8.5/lib/listen/listener.rb:246:in `block in _wait_for_changes'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/listen-2.8.5/lib/listen/listener.rb:229:in `loop'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/listen-2.8.5/lib/listen/listener.rb:229:in `_wait_for_changes'
-/Users/andrewyolland/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/listen-2.8.5/lib/listen/listener.rb:318:in `block in _start_wait_thread'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: $color: \"violet\" is not a color for `darken'\A         on line 9 of main.scss, in `results'\A         from line 110 of main.scss\A \A 4:       border-left: 3px solid $color;\A 5:       border-top: 3px solid $color;\A 6:     }\A 7:     \A 8:     .#{$color}-back{\A 9:       background: darken($color, 15%);\A 10:       border-right: 3px solid $color;\A 11:       border-bottom: 3px solid $color;\A 12:     }\A 13:     \A 14:     .#{$color}-soft{"; }
+.controls {
+  background: #bebe9e;
+  width: 320px;
+  margin: 5px auto;
+  padding: 5px; }
+  .controls .control-group {
+    text-align: center;
+    width: 100%; }
+    .controls .control-group .control-group__title {
+      margin: 5px auto;
+      font-size: 15px;
+      text-transform: uppercase; }
+    .controls .control-group .control-group__select {
+      width: 18%;
+      display: inline-block;
+      background: #a0a070; }
+    .controls .control-group .control-group__operator {
+      font: normal normal normal 11px/normal '.HelveticaNeueDeskInterface-Regular';
+      text-align: center;
+      width: 3%;
+      display: inline-block; }
+
+.results-tree {
+  width: 320px;
+  margin: 0 auto; }
+  .results-tree .results-tree__row {
+    width: 100%;
+    text-align: center; }
+    .results-tree .results-tree__row div {
+      width: 28px;
+      height: 28px;
+      color: white;
+      overflow: hidden;
+      font-size: 24px;
+      line-height: 1; }
+      .results-tree .results-tree__row div.potion-green {
+        background: green; }
+      .results-tree .results-tree__row div.potion-red {
+        background: red; }
+      .results-tree .results-tree__row div.potion-blue {
+        background: blue; }
+      .results-tree .results-tree__row div.potion-neutral {
+        background: gray; }
+    .results-tree .results-tree__row .results-tree__element {
+      vertical-align: top;
+      color: white; }
+
+.answer-grid {
+  display: table;
+  width: 320px;
+  margin: 0 auto; }
+  .answer-grid .answer-grid__row {
+    width: 100%;
+    display: table-row; }
+    .answer-grid .answer-grid__row .answer-grid__answer {
+      box-sizing: border-box;
+      display: table-cell;
+      width: 12.5%;
+      height: 30px; }
+    .answer-grid .answer-grid__row .answer-grid__answer.guess {
+      border: 4px solid #F0E; }
+
+.purple-border {
+  border-left: 3px solid purple;
+  border-top: 3px solid purple; }
+
+.purple-back {
+  background: #340033;
+  border-right: 3px solid purple;
+  border-bottom: 3px solid purple; }
+
+.purple-soft {
+  background: #ba7aba;
+  border: 1px solid #743474; }
+
+.purple-soft.true {
+  background: #ff4dff; }
+
+.purple-soft.false {
+  background: #400040;
+  border: 1px solid black; }
+
+.green-border {
+  border-left: 3px solid green;
+  border-top: 3px solid green; }
+
+.green-back {
+  background: #003400;
+  border-right: 3px solid green;
+  border-bottom: 3px solid green; }
+
+.green-soft {
+  background: #7aba7a;
+  border: 1px solid #347434; }
+
+.green-soft.true {
+  background: #4dff4d; }
+
+.green-soft.false {
+  background: #004000;
+  border: 1px solid black; }
+
+.sienna-border {
+  border-left: 3px solid sienna;
+  border-top: 3px solid sienna; }
+
+.sienna-back {
+  background: #64331c;
+  border-right: 3px solid sienna;
+  border-bottom: 3px solid sienna; }
+
+.sienna-soft {
+  background: #caa391;
+  border: 1px solid #845d4b; }
+
+.sienna-soft.true {
+  background: #e9c2b0; }
+
+.sienna-soft.false {
+  background: #502916;
+  border: 1px solid black; }
+
+.gold-border {
+  border-left: 3px solid gold;
+  border-top: 3px solid gold; }
+
+.gold-back {
+  background: #b39700;
+  border-right: 3px solid gold;
+  border-bottom: 3px solid gold; }
+
+.gold-soft {
+  background: #fae67a;
+  border: 1px solid #b4a034; }
+
+.gold-soft.true {
+  background: #fff7cc; }
+
+.gold-soft.false {
+  background: #7f6b00;
+  border: 1px solid black; }
+
+.blue-border {
+  border-left: 3px solid blue;
+  border-top: 3px solid blue; }
+
+.blue-back {
+  background: #0000b3;
+  border-right: 3px solid blue;
+  border-bottom: 3px solid blue; }
+
+.blue-soft {
+  background: #7a7afa;
+  border: 1px solid #3434b4; }
+
+.blue-soft.true {
+  background: #ccccff; }
+
+.blue-soft.false {
+  background: #00007f;
+  border: 1px solid black; }
+
+.tan-border {
+  border-left: 3px solid tan;
+  border-top: 3px solid tan; }
+
+.tan-back {
+  background: #bc9055;
+  border-right: 3px solid tan;
+  border-bottom: 3px solid tan; }
+
+.tan-soft {
+  background: #e3d4c0;
+  border: 1px solid #9d8e7a; }
+
+.tan-soft.true {
+  background: white; }
+
+.tan-soft.false {
+  background: #695a46;
+  border: 1px solid black; }
+
+.red-border {
+  border-left: 3px solid red;
+  border-top: 3px solid red; }
+
+.red-back {
+  background: #b30000;
+  border-right: 3px solid red;
+  border-bottom: 3px solid red; }
+
+.red-soft {
+  background: #fa7a7a;
+  border: 1px solid #b43434; }
+
+.red-soft.true {
+  background: #ffcccc; }
+
+.red-soft.false {
+  background: #7f0000;
+  border: 1px solid black; }
+
+.dimgray-border {
+  border-left: 3px solid dimgray;
+  border-top: 3px solid dimgray; }
+
+.dimgray-back {
+  background: #434343;
+  border-right: 3px solid dimgray;
+  border-bottom: 3px solid dimgray; }
+
+.dimgray-soft {
+  background: #afafaf;
+  border: 1px solid dimgray; }
+
+.dimgray-soft.true {
+  background: #cfcfcf; }
+
+.dimgray-soft.false {
+  background: #343434;
+  border: 1px solid black; }
+
+/*# sourceMappingURL=main.css.map */
