--- a/main.css
+++ b/main.css
@@ -41,6 +41,12 @@ body {
       overflow: hidden;
       font-size: 24px;
       line-height: 1; }
+      .results-tree .results-tree__row div.potion-redgreen, .results-tree .results-tree__row div.potion-greenred {
+        background: linear-gradient(red, green); }
+      .results-tree .results-tree__row div.potion-greenblue, .results-tree .results-tree__row div.potion-bluegreen {
+        background: linear-gradient(green, blue); }
+      .results-tree .results-tree__row div.potion-bluered, .results-tree .results-tree__row div.potion-redblue {
+        background: linear-gradient(blue, red); }
       .results-tree .results-tree__row div.potion-green {
         background: green; }
       .results-tree .results-tree__row div.potion-red {
@@ -56,7 +62,7 @@ body {
 .answer-grid {
   display: table;
   width: 320px;
-  margin: 0 auto; }
+  margin: 5px auto; }
   .answer-grid .answer-grid__row {
     width: 100%;
     display: table-row; }
@@ -67,6 +73,9 @@ body {
       height: 30px; }
     .answer-grid .answer-grid__row .answer-grid__answer.guess {
       border: 4px solid #F0E; }
+    .answer-grid .answer-grid__row .answer-grid__answer > img {
+      margin: 3px;
+      vertical-align: middle; }
 
 .purple-border {
   border-left: 3px solid purple;
