--- a/main.css
+++ b/main.css
@@ -40,7 +40,8 @@ body {
       color: white;
       overflow: hidden;
       font-size: 24px;
-      line-height: 1; }
+      line-height: 1;
+      vertical-align: top; }
       .results-tree .results-tree__row div.potion-blankplus, .results-tree .results-tree__row div.potion-blankminus {
         background: gray; }
       .results-tree .results-tree__row div.potion-redgreenminus, .results-tree .results-tree__row div.potion-redgreenplus {
